# neongrad

./: CMakeLists.txt  README.md
benchmarks/: benchmark_gemm.cpp  benchmark_gemm_pytorch.py
src/: main_infer.cpp  main_train.cpp
src/core/: gemm_naive.cpp  gemm_naive.h  random.cpp  random.h  tensor.cpp  tensor.h  tensor_math.cpp  tensor_math.h
src/io/: image_loader.cpp  image_loader.h  mnist_loader.cpp  mnist_loader.h  onnx_weights.cpp  onnx_weights.h
src/nn/: activations.cpp  activations.h  initializer.cpp  initializer.h  layer.cpp  layer.h  loss.cpp  loss.h  network.cpp  network.h  optimizer.cpp  optimizer.h
tests/: test_backprop.cpp  test_gradients.cpp  test_layer.cpp  test_tensor.cpp
